--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <div class="header">
+    <!-- Added header element tag.-->
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,60 +24,62 @@
                 </li>
             </ul>
         </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    </header>
+    <!-- Added figure semantic element tag. -->
+    <figure class="hero" alt="A diverse business team consider consider their digital marketing options."></figure>
+    <!-- Added main semantic element tag. -->
+    <main class="content">
+        <section class="search-engine-optimization">
+            <!-- Added alt text for the images. -->
+            <img src="./assets/images/search-engine-optimization.jpg" alt="A notebook summarizing the elements of search engine optimization sits in a busy workspace." class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        </section>
+        <section id="online-reputation-management" class="online-reputation-management">
+            <img src="./assets/images/online-reputation-management.jpg" alt="A business owner manages their reputation metrics on a laptop." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </section>
+        <section id="social-media-marketing" class="social-media-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" alt="A business team discusses the various options of social media marketing." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+        </section>
+    </main>
+    <!-- Added aside element tag. -->
+    <aside class="benefits">
+        <!-- Added figure element tag for the three following sections. -->
+        <figure class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </div>
-        <div class="benefit-brand">
+            <!-- Streamlined text as figcaption elements. -->
+            <!-- Added alt text for the images in the aside. -->
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
+                <figcaption>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</figcaption>
+        </figure>
+        <figure class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit-cost">
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/>
+                <figcaption>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</figcaption>
+        </figure>
+        <figure class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </div>
-    </div>
-    <div class="footer">
+            <img src="./assets/images/cost-management.png" alt="Cost Management"/>
+                <figcaption>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</figcaption>
+        </figure>
+    </aside>
+    <!-- Added footer element tag. -->
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
