--- a/index.html
+++ b/index.html
@@ -8,28 +8,23 @@
 </head>
 
 <body>
-    <!-- Added header element tag.-->
-    <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <ul>
-                <li>
+    <!-- Replaced header class tag with header semantic tag.-->
+    <header>
+        <!-- Removed ccs text color styling in favor of inline styling.-->
+        <h1>Hori<span style="color: #d9dcd6">seo</span>n</h1>
+        <!-- Added nav semantic element tag. Removed list elements.-->
+        <nav>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
                     <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
                     <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </div>
+        </nav>
     </header>
     <!-- Added figure semantic element tag. -->
     <figure class="hero" alt="A diverse business team consider consider their digital marketing options."></figure>
-    <!-- Added main semantic element tag. -->
-    <main class="content">
-        <section class="search-engine-optimization">
+    <!-- Replaced content class tag with main semantic element tag.-->
+    <main>
+        <!-- Replaced class and id tags with section semantic element tags. -->
+        <section>
             <!-- Added alt text for the images. -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="A notebook summarizing the elements of search engine optimization sits in a busy workspace." class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -37,14 +32,14 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section>
             <img src="./assets/images/online-reputation-management.jpg" alt="A business owner manages their reputation metrics on a laptop." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section>
             <img src="./assets/images/social-media-marketing.jpg" alt="A business team discusses the various options of social media marketing." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -52,29 +47,29 @@
             </p>
         </section>
     </main>
-    <!-- Added aside element tag. -->
-    <aside class="benefits">
-        <!-- Added figure element tag for the three following sections. -->
-        <figure class="benefit-lead">
+    <!-- Replaced benefits class with aside semantic element tag. -->
+    <aside>
+        <!-- Replaced class tags with figure element tags in the three following sections. -->
+        <figure>
             <h3>Lead Generation</h3>
-            <!-- Streamlined text as figcaption elements. -->
+            <!-- Streamlined text with figcaption semantic element tags. -->
             <!-- Added alt text for the images in the aside. -->
             <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
                 <figcaption>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</figcaption>
         </figure>
-        <figure class="benefit-brand">
+        <figure>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/>
                 <figcaption>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</figcaption>
         </figure>
-        <figure class="benefit-cost">
+        <figure>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cost Management"/>
                 <figcaption>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</figcaption>
         </figure>
     </aside>
-    <!-- Added footer element tag. -->
-    <footer class="footer">
+    <!-- Replaced footer class with footer semantic element tag. -->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
