Cleaned up code a bit more. Tried futureproofing the site with flexboxes. Needs more work.

--- a/index.html
+++ b/index.html
@@ -20,31 +20,38 @@
         </nav>
     </header>
     <!-- Added figure semantic element tag. -->
-    <figure class="hero" alt="A diverse business team consider consider their digital marketing options."></figure>
+    <figure id="hero" alt="A diverse business team consider consider their digital marketing options."></figure>
     <!-- Replaced content class tag with main semantic element tag.-->
     <main>
         <!-- Replaced class and id tags with section semantic element tags. -->
         <section>
             <!-- Added alt text for the images. -->
+            <!-- Added article semantic element tag to facilitate flexbox formatting. -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="A notebook summarizing the elements of search engine optimization sits in a busy workspace." class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
+            <article>
+                <h2>Search Engine Optimization</h2>
+                <p>
+                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                </p>
+            </article>
         </section>
         <section>
             <img src="./assets/images/online-reputation-management.jpg" alt="A business owner manages their reputation metrics on a laptop." class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
+            <article>
+                <h2>Online Reputation Management</h2>
+                <p>
+                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                </p>
+            </article>
         </section>
         <section>
             <img src="./assets/images/social-media-marketing.jpg" alt="A business team discusses the various options of social media marketing." class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
+            <article>
+                <h2>Social Media Marketing</h2>
+                <p>
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                </p>
+            </article>
         </section>
     </main>
     <!-- Replaced benefits class with aside semantic element tag. -->
