Fixed stylistic issues.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section>
             <!-- Added alt text for the images. -->
             <!-- Added article semantic element tag to facilitate flexbox formatting. -->
-            <img src="./assets/images/search-engine-optimization.jpg" alt="A notebook summarizing the elements of search engine optimization sits in a busy workspace." class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="A notebook summarizing the elements of search engine optimization sits in a busy workspace." class="gap" />
             <article>
                 <h2>Search Engine Optimization</h2>
                 <p>
@@ -36,16 +36,16 @@
             </article>
         </section>
         <section>
-            <img src="./assets/images/online-reputation-management.jpg" alt="A business owner manages their reputation metrics on a laptop." class="float-right" />
-            <article>
+            <article class="gap">
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
             </article>
+            <img src="./assets/images/online-reputation-management.jpg" alt="A business owner manages their reputation metrics on a laptop."/>
         </section>
         <section>
-            <img src="./assets/images/social-media-marketing.jpg" alt="A business team discusses the various options of social media marketing." class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="A business team discusses the various options of social media marketing." class="gap"/>
             <article>
                 <h2>Social Media Marketing</h2>
                 <p>
